[package]
name = "pyreworks-ctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pyrectl"

[dependencies]
anyhow = "1.0.90"
clap = "4.5.20"
colored = "2.1.0"
pyreworks-g560-driver = { version = "0.1.0", path = "../devices/g560-driver" }
nusb = "0.1.10"
pyreworks-common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.40.0", features = ["full"] }
parse_duration = "2.1.1"
num = "0.4.3"
